# fafka

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/log/: mod.rs
src/server/: connection.rs  handler.rs  listener.rs  mod.rs
src/store/: index.rs  log.rs  mod.rs  segment.rs
