[package]
name = "fafka"
version = "0.1.0"
authors = ["Romain Hamel <romain.hamel@untienots.com>"]
edition = "2018"

[features]
# Treat warnings as a build error.
strict = []

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "*"

structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"

[dev-dependencies]
tempfile = "3"
